[package]
name = "ref-mining-evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# git2 = "0.13.24"
# tree-sitter = "0.20.0"
hyper_ast_cvs_git = { path = "../cvs/git" }
hyper_ast = { path = "../hyper_ast" }
# env_logger = "0.9.0"
# log = { version = "0.4.6", features = ["max_level_debug", "release_max_level_info"] }

# pommes = "0.0.2"


serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.12.0"
serde_json = "1.0.79"
clap = { version = "3.1.6",features = ["derive"] }
termion = "1.5.6"

rayon = "1.5.2"

[build-dependencies]

# [profile.release]
# debug = 1

# [[bin]]
# name = "bench"
# path = "src/bin/main.rs"