[package]
name = "tree-sitter_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tree-sitter = "0.20.0"
# atomic-counter = "1.0.1"
# num = "0.4.0"
# bitvec = "0.22.3"
# stack-graphs = "=0.3.0"
# controlled-option = "0.4.1"
# string-interner = "0.14.0"
# cfg-if = "1.0"
# hashbrown = { version = "0.11.2", default-features = false, features = ["ahash"] }


# libc = "0.2"

# should go to dec deps ?
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
quote = "1.0.10"
heck = "0.3.3"


[build-dependencies]
cc = "*"

[dev-dependencies]
pretty_assertions = "1.0.0"