[package]
name = "hyperast"
version = "0.2.0"
edition = "2021"
description = "Temporal code analyses at scale"
license = "GPL-3.0"

[dependencies]
num = "0.4.0"
cfg-if = "1.0"
hashbrown = { version = "0.14.5", default-features = false, optional = true }

#  # logging
log = { version = "0.4.6" }

## store
legion = { version = "0.4.0", features = [
    "extended-tuple-impls", # soon should not be req., ie moving to the entry builder
], optional = true }
bitvec = "1.0.1"
controlled-option = "0.4.1" # check if really needed
string-interner = { version = "0.17.0", optional = true }

# # gen
tree-sitter = { workspace = true, optional = true }


# # memusage
libc = "0.2"

# # types
strum = "0.25"
strum_macros = "0.25" # issue on later version with serialization of curly braces
lazy_static = "1.4.0"

getrandom = { version = "^0.2.7" }
indexmap = "2.2.6"                 # https://github.com/tkaitchuck/aHash/issues/95#issuecomment-903560879

hecs = { version = "0.10.5", features = [], optional = true }
bevy_ecs = { version = "0.14.2", default-features = false, optional = true }

ref-cast = "1.0" # help with transparent unit structs, it makes proper layout assertions

frunk = { version = "0.4.3", optional = true }

## scripting
mlua = { version = "0.9", features = ["luau"], optional = true }
rhai = { version = "1.12.0", features = ["sync", "serde", "internals"], optional = true }

[dev-dependencies]
env_logger = "0.11.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-ctl = { version = "0.5.0", optional = true }

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["jemalloc", "legion",
# "bevy_ecs", 
# "hecs", 
"native", "ts", "scripting"]
legion = ["dep:legion"]
hecs = ["dep:hecs"]
bevy_ecs = ["dep:bevy_ecs", "dep:frunk"]
web = ["getrandom/js", "dep:string-interner", "dep:hashbrown"]
native = ["dep:string-interner", "dep:hashbrown", "hashbrown?/ahash"]
jemalloc = ["jemallocator", "jemalloc-ctl"]
ts = ["dep:tree-sitter"]
serialize = ["serde"]
scripting = ["dep:rhai", "dep:mlua"]
subtree-stats=[]
fetched=[]
