[package]
name = "hyper_diff"
version = "0.3.0"
edition = "2024"
autobenches = false

[dependencies]
specs = "0.20.0"
num-traits = "0.2.14"
enum-map = "2.4.1"
bitvec = "1.0.1"
str-distance = "0.1.0"
log = { version = "0.4.6" }
hyperast = { workspace = true }

logging_timer = "1.1.0"

[dev-dependencies]
criterion = { version = "0.4", features = [
    "rayon",
    "plotters",
    "cargo_bench_support",
    "html_reports",
    # "real_blackbox", # need nightly
] }
env_logger = "0.11.3"
hungarian = "1.1.1"

[lib]
bench = false

[[bench]]
name = "compressed_path_iter"
harness = false
