[package]
name = "hyper_diff"
version = "0.3.0"
edition = "2024"
autobenches = false

[dependencies]
specs = "0.20.0"
num-traits = "0.2.14"
enum-map = "2.4.1"
bitvec = "1.0.1"
str-distance = "0.1.0"
log = { version = "0.4.6" }
hyperast = { workspace = true, features = ["native", "legion"] }
rand = "0.9.1"

logging_timer = "1.1.0"

jemallocator = { package = "tikv-jemallocator", version = "0.5.0" }
jemalloc-ctl = { package = "tikv-jemalloc-ctl", version = "0.5.4" }

[dev-dependencies]
criterion = { version = "0.6.0", features = [
    "rayon",
    "plotters",
    "cargo_bench_support",
    "html_reports",
] }
env_logger = "0.11.3"
hungarian = "1.1.1"

hyperast_gen_ts_java = { workspace = true, features = ["impl"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
iai-callgrind = "0.14.0"

[features]
experimental = []

[lib]
bench = false

[[bench]]
name = "compressed_path_iter"
harness = false

[[bench]]
name = "qgrams"
harness = false

[[bench]]
name = "simple_tree"
harness = false
features = ["java"]

[[bench]]
name = "legion_tree"
harness = false
features = ["java"]

[[bench]]
name = "qgrams_iai"
harness = false

[[bench]]
name = "hashmap_pitfalls"
harness = false

[[bench]]
name = "hashmap_pitfalls_direct_indexing"
harness = false
