[package]
name = "ref-mining-evaluation"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperast_vcs_git = { workspace = true }
hyperast = { workspace = true, features = ["serialize"] }
# log = { version = "0.4.6", features = ["max_level_debug", "release_max_level_info"] }

serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.12.0"
serde_json = "1.0.79"
clap = { version = "3.1.6", features = ["derive"] }
termion = "1.5.6"

rayon = "1.5.2"

# TODO try using that
# indicatif = "0.17.0"

[build-dependencies]

# [profile.release]
# debug = 1

# [[bin]]
# name = "bench"
# path = "src/bin/main.rs"
