[package]
name = "hyper_ast_cvs_git"
version = "0.2.0"
edition = "2021"

[dependencies]
git2 = { version = "0.18.2", features = ["vendored-libgit2", "vendored-openssl"] }
tree-sitter = "0.23.0"
hyper_ast_gen_ts_cpp = { path = "../../gen/tree-sitter/cpp", optional = true }
hyper_ast_gen_ts_java = { path = "../../gen/tree-sitter/java", optional = true }
hyper_ast_gen_ts_xml = { path = "../../gen/tree-sitter/xml", optional = true }
hyper_ast = { path = "../../hyper_ast" }
hyper_ast_tsquery = { path = "../../tsquery" }
log = { version = "0.4.6" }
num = "0.4.0"
tuples = "=1.4.1"

enumset = "1.0.12"

serde = { version = "1.0.130" }

# tree-sitter-graph = { path = "../../../tree-sitter-graph", optional = true }
tree-sitter-graph = { git = "https://github.com/quentinLeDilavrec/tree-sitter-graph", rev = "57527aafe1418d6450cfe810fdbdde0f56c3ec61", version = "0.12", optional = true }


[dev-dependencies]
env_logger = "0.11.3"

[build-dependencies]

[features]
default = ["maven_java", "make_cpp", "npm_ts"]
tsg = ["dep:tree-sitter-graph"]
maven_java = ["maven", "java"]
maven = ["dep:hyper_ast_gen_ts_xml"]
# gradle = []
java = ["dep:hyper_ast_gen_ts_java"]
# kotlin = []
# scala = []
make_cpp = ["make", "cpp"]
make = []
# cmake = []
# ninja = []
cpp = ["dep:hyper_ast_gen_ts_cpp"]
# c = []
npm_ts = ["npm", "ts"]
npm = []
ts = []
# js = []
# tsx = []
# cargo_rust = []
# cargo = []
# rust = []
impact = []