[package]
name = "hyper_ast_cvs_git"
version = "0.2.0"
edition = "2021"

[dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
tree-sitter = { workspace = true }
hyper_ast_gen_ts_cpp = { workspace = true, optional = true }
hyper_ast_gen_ts_java = { workspace = true, optional = true }
hyper_ast_gen_ts_xml = { workspace = true, optional = true }
hyper_ast = { workspace = true }
hyper_ast_tsquery =  { workspace = true }
log = { version = "0.4.6" }
num = "0.4.0"
tuples = "=1.4.1"

enumset = "1.0.12"

serde = { version = "1.0.130" }

tree-sitter-graph = { workspace = true, optional = true }

[dev-dependencies]
env_logger = "0.11.3"
tree-sitter-graph = { workspace = true }
hyper_ast_tsquery = { workspace = true, features = ["tsg"]}
hyper_ast_gen_ts_java = { workspace = true }#, features = ["subtree-stats"]

[build-dependencies]

[features]
default = ["maven_java", "make_cpp", "npm_ts"]
tsg = ["dep:tree-sitter-graph"]
maven_java = ["maven", "java"]
maven = ["dep:hyper_ast_gen_ts_xml"]
# gradle = []
java = ["dep:hyper_ast_gen_ts_java"]
# kotlin = []
# scala = []
make_cpp = ["make", "cpp"]
make = []
# cmake = []
# ninja = []
cpp = ["dep:hyper_ast_gen_ts_cpp"]
# c = []
npm_ts = ["npm", "ts"]
npm = []
ts = []
# js = []
# tsx = []
# cargo_rust = []
# cargo = []
# rust = []
impact = []
subtree-stats = [
    "hyper_ast/subtree-stats",
    "hyper_ast_gen_ts_java/subtree-stats"
]
