[package]
name = "polyglote"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# enums = { git = "https://github.com/mozilla/rust-code-analysis", branch = "master", package = "enums", version = "0.0.1" }
tree-sitter = { workspace = true }
tree-sitter-loader = "0.23.0"
tree-sitter-query = { git = "https://github.com/tree-sitter-grammars/tree-sitter-query.git", rev = "d25e8d183f319497b8b22a2a1585975b020da722", version = "0.3.0" }
# tree-sitter-tsq = "0.19.0"

tree-sitter-graph = { workspace = true, optional = true }

# tree-sitter-typescript = { git = "https://github.com/quentinLeDilavrec/tree-sitter-typescript", rev = "eee64b9ea005d2641cfce5b0a81404a9c8877740", version = "0.20.5" }
tree-sitter-typescript = "0.23.0"

tree-sitter-java = "0.23.0"
# tree-sitter-java = { git = "https://github.com/quentinLeDilavrec/tree-sitter-java", version = "0.21.0", rev = "7699d4a296ca27fc14511bc75a1a899327f483fc" }
# tree-sitter-java = { path="../../tree-sitter-java", version = "0.21.0" }

tree-sitter-python = "0.23.0"
# tree-sitter-rust = "=0.20.3"
# tree-sitter-mozcpp = "0.20.2"
# tree-sitter-cpp = "0.23.4"
# tree-sitter-cpp = { path="../../tree-sitter-cpp", version="0.23.1"}
tree-sitter-cpp = { git = "https://github.com/quentinLeDilavrec/tree-sitter-cpp", version = "0.23.1", rev = "81216ae5ba2778522eee06392cf0352b9410e4fe" }
tree-sitter-c = "0.23.0"
# tree-sitter-kotlin = "0.3.5"
tree-sitter-xml = "0.7.0"
# tree-sitter-xml = { git = "https://github.com/quentinLeDilavrec/tree-sitter-xml", version = "0.20" }

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79"

hecs = "0.10.5"
# hecs-hierarchy = "0.11.7"

derive_deref = "1.1.1"

quote = "1.0.10"
syn = "2.0.71"
proc-macro2 = "1.0.0"
heck = "0.5.0"
prettyplease = "0.2.20"

vec_extract_if_polyfill = "0.1.0"

# TODO use types from hyperast crate
strum = "0.24"
strum_macros = "0.24" # issue on later version with serialization of curly braces
